frontend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: expense
spec:
  selector:
    app: frontend
    tier: frontend
    project: expense
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
